tests/ui/prim_ty_field_access.stderr
error: primitive type `i64` has no fields
   --> prim_ty_field_access.ray:5:13
    |
 LL |     let b = a.a;
    |             ^

