tests/ui/prim_ty_field_access.ina
// COMPILE_FAIL

fn main() {
    let a = 20;
    let b = a.a;
}

